[tool.poetry]
name = "glow"
version = "0.1.0"
description = "Low performance Google-like in Python"
authors = ["LSmith-Zenoscave <lsmith@zenoscave.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
sqlalchemy = "^1.3.19"
pydantic = "^1.6.1"
fastapi = "^0.61.1"
async-exit-stack = { version = "^1.0.1", python = "~3.6" }
async-generator = { version = "^1.10", python = "~3.6" }

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
uvicorn = "^0.11.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
